@@ -4,6 +4,10 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pkgcore observer api's were heavily gutted and split into observer and
+  outputter.  This should enable easier UX integration, while enabling
+  our next step towards parallelization.
+
 * pkgcore now tracks and records the originating/source repository
   when installing to the vdb.
 
